TAG: lib_py_littriage-6-0-11-7
TAG: lib_py_littriage-6-0-11-6
DATE: 12/11/2017
STAFF: lec
CHANGES: TR12705 LTLO: refresh info from NLM
1) PubMedAgent.py : AID check; find() needs to check find() > 0

TAG: lib_py_littriage-6-0-11-5
DATE: 12/07/2017
STAFF: sc
CHANGES: TR12705 LTLO: refresh info from NLM
1) comment out debug

TAG: lib_py_littriage-6-0-11-4
DATE: 12/07/2017
STAFF: sc
CHANGES: TR12705 LTLO: refresh info from NLM
1) add doId to reference object getter/setter, parse from medline

TAG: littriageload-6-0-11-2
TAG: littriageload-6-0-11-1
DATE: 10/04/2017, 10/09/2017
STAFF: lec 
CHANGES:
TR12250/Lit Triage project

TAG: none
DATE: 6/30/2017
STAFF: sc
CHANGES:
1) Implemented stub for medline format

TAG: none
DATE: 6/1/2017
STAFF: jsb
CHANGES:
1) new product, initial addition